# pitou-app

./: .taurignore  Cargo.toml  README.md  Trunk.toml  index.html  paste_here.txt  rustfmt.toml  styles.css  todo.txt
.devcontainer/: devcontainer.json
backend/: Cargo.toml
backend/src/: lib.rs
backend/src/actions/: clipboard.rs  mod.rs  search.rs
backend/src/database/: extra.rs  mod.rs
backend/src/db/: extra.rs  mod.rs
backend/src/fs/: error.rs  extra.rs  mod.rs
backend/src/handles/: extra.rs  mod.rs  options.rs
public/data/database/: database.db
resources/old/: icons8-refresh.json
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/channel/: mod.rs
src/app/: mod.rs  pitou.rs  settings.rs  view.rs
src/app/components/: ancestors.rs  clicks.rs  mod.rs  props.rs
src/app/components/main_pane/: dsc.rs  mod.rs  rows.rs  space.rs
src/app/cview/: bottom_pane.rs  left_pane.rs  mod.rs  side_pane.rs
src/app/cview/bottom_pane/: loading.rs  mod.rs  preloaders.rs  search.rs  statics.rs
src/app/cview/left_pane/: mod.rs
src/app/cview/main_pane/: dsc.rs  mod.rs  rows.rs  space.rs
src/app/cview/pane/: mod.rs
src/app/cview/pane/side_pane/: mod.rs  rows.rs  top.rs
src/app/cview/popup/: confirm.rs  mod.rs  new_dir.rs  new_file.rs  properties.rs  rename.rs
src/app/cview/side_pane/: mod.rs  rows.rs  top.rs
src/app/cview/toolbar/: mod.rs  new_items.rs  others.rs  paste_actions.rs  prop_search.rs
src/app/cview/top_pane/: ancestors.rs  mod.rs
src/app/cview/top_pane/toolbar/: info_search.rs  mod.rs  new_items.rs  others.rs  paste_actions.rs  prop_search.rs
src/app/data/: directory.rs  mod.rs  selections.rs
src/app/home/: locals.rs  mod.rs
src/app/search/: mod.rs  options.rs
src/app/settingsview/: mod.rs
src/app/tasks/: mod.rs
src/data/: mod.rs
