[package]
name = "pitou-app-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gloo = "0.8.1"
backend = { path = "./backend" }
serde = { version = "1.0.171", features = ["derive"] }
yew = { version = "0.20.0", features = ["csr"] }
serde-wasm-bindgen = "0.5.0"
wasm-bindgen-futures = "0.4.37"
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
web-sys = "0.3.64"
js-sys = "0.3.64"
#tokio = { version = "1.29.1", features = ["rt-multi-thread"] }

[workspace]
members = ["src-tauri", "backend"]
