[package]
name = "pitou-app-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
backend = { path = "./backend" }
serde = { version = "1.0.171", features = ["derive"] }
yew = { version = "0.20.0", features = ["csr"] }
serde-wasm-bindgen = "0.6.0"
wasm-bindgen-futures = "0.4.37"
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
web-sys = { version = "0.3.64", features = ["Screen", "HtmlSelectElement"] }
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", features = ["event", "window", "tauri"] }
js-sys = "0.3.64"
paste = "1.0.14"

[dev.dependencies]
wasm-bindgen-test = "0.3.37"

[workspace]
members = ["src-tauri", "backend"]
