[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = { version = "1.0.4", optional = true }
bincode = "1.3.3"
chrono = { version = "0.4.26", features = ["serde"] }
diesel = { version = "2.1.0", features = ["sqlite"], optional = true }
fs_extra = "1.3.0"
libsqlite3-sys = { version = "0.26.0", features = ["bundled"], optional = true }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
sysinfo = "0.29.4"
tokio = { version = "1.29.1", features = ["full"], optional = true }
trash = { version = "3.0.6", optional = true }


[features]
tauri = ["diesel", "tokio", "libsqlite3-sys", "async-recursion", "trash"]
