[package]
name = "pitou-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["nisaacdz"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
backend = { path = "../backend", features = ["tauri"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
